* Fixed deprecation: Replace std::codecvt with iconv in read_file
* Bugfix: reserve() only guarantees capacity, not size → Writing via .data()
  is undefined behaviour. Using resize() makes the memory usable.
* As strerror() is not thread-safe, use strerror_r() where available.
* strncpy likes to copy without NUL → terminate explicitly.

Important changes in 2.17 (2024-11-10):

* Bugfix: Issue #164: Fixed incorrectly discarded HLS seek requests.
* Bugfix: Wrong error message fixed when an invalid audio/video codec was
  selected. The message should rather say "unsupported codec" instead of
  talking about "sample format not supported.".
* Bugfix: Issue #162: If not present, add time stamps to the copied streams.
* Changed quality from 34 to 40 for hardware encoded video streams to create
  slightly smaller files.
* Closes#1084487: Moved from the Fuse 2 to the Fuse 3 API.

Important changes in 2.16 (2024-06-10):

* Bugfix: Closes#1072412: Fix build with FFmpeg 7.0. write_packet() now with
  const buffer as of Libavformat 61+.
* Fixed deprecation: 2014-05-18 - 68c0518 / fd05602 - lavc 55.63.100 / 55.52.0
  - avcodec.h
  Add avcodec_free_context(). From now on it should be used for freeing
  AVCodecContext.
* Fixed deprecation: 2023-05-15 - 7d1d61cc5f5 - lavc 60 - avcodec.h
  Depreate AVCodecContext.ticks_per_frame in favor of
  AVCodecContext.framerate (encoding) and
  AV_CODEC_PROP_FIELDS (decoding).

Important changes in 2.15 (2024-02-03):

* Bugfix: Issue #151: Fixed autocopy STRICT never triggers for video streams
* Bugfix: Issue #153: The --include_extensions parameter now contains a
  description, which was previously missing from the manual and online help.
* Issue #149: 2023-05-04 - xxxxxxxxxx - lavu 58.7.100 - frame.h
  Deprecate AVFrame.interlaced_frame, AVFrame.top_field_first, and
  AVFrame.key_frame.
  Add AV_FRAME_FLAG_INTERLACED, AV_FRAME_FLAG_TOP_FIELD_FIRST, and
  AV_FRAME_FLAG_KEY flags as replacement.